objects/ReceivableInvoice__c/ReceivableInvoice__c.object-meta.xml
<CustomObject>
    <label>Receivable Invoice</label>
    <nameField>
        <displayFormat>RInv-{0000}</displayFormat>
        <label>Receivable Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivable Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>