objects/ReceivableInvoice__c/fields/Actual_Amoumnt__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amoumnt__c</fullName>
    <label>Actual Amoumnt</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>