objects/ReceivableInvoice__c/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product List</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Receivable Invoices</relationshipLabel>
    <relationshipName>Receivable_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>