objects/ReceivableInvoice__c/fields/Receivable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receivable Invoice</label>
    <referenceTo>ReceivableInvoice__c</referenceTo>
    <relationshipLabel>Receivable Invoices</relationshipLabel>
    <relationshipName>Receivable_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>