objects/ReceivableInvoice__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Receivable Invoices</relationshipLabel>
    <relationshipName>Receivable_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>