objects/ReceivableInvoice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>