objects/ReceivableInvoice__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Actual_Amoumnt__c + ((Actual_Amoumnt__c /100)* Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>